# sentio

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: emotion_demo.py
src/sentio/: __init__.py
src/sentio/analyzer/: __init__.py  scene.py
src/sentio/api/: __init__.py  server.py
src/sentio/conductor/: __init__.py  orchestrator.py
src/sentio/emotion/: __init__.py  classifier.py
src/sentio/models/: __init__.py  backbone.py
tests/: test_emotion_classifier.py  test_scene_analyzer.py
