[project]
name = "sentio"
version = "0.1.0"
description = "SENTIO Empathic AI — Narrative Intelligence Engine for Sylvain Cinema"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Sylvain Technologies", email = "engineering@sylvain.tech" }]
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
